--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -55,6 +55,7 @@ body{
     font-family: 'Poppins', sans-serif;
     letter-spacing: 3px;
     padding: 0 10rem;
+    overflow-x: hidden;
 
     @media screen and (max-width: 768px) { padding: 1rem; }
     @media screen and (max-width: 1440px) { padding: 0 5rem; }
@@ -146,6 +147,7 @@ body{
 
             .mini_pics{
                 @media screen and (max-width: 768px) { display: flex; }
+
                 img{
                     border: 10px solid transparent;
                     background-color: $preto;
@@ -158,6 +160,8 @@ body{
                     object-fit: contain;
 
                     @media screen and (max-width: 375px) { width: 75px; height:75px}
+
+                    @media screen and (max-width: 325px) { width: 65px; height:65px}
 
 
                     &:hover{
@@ -179,8 +183,8 @@ body{
                 height: 35rem;
                 position: relative;
 
-                @media screen and (max-width: 320px) { width: 15rem; height: 15rem;}
                 @media screen and (max-width: 425px) { width: 20rem; height: 20rem;}
+                @media screen and (max-width: 320px) { width: 15rem; height: 15rem;}
 
             }
 
